--- a/02-train/01-finetune.ipynb
+++ b/02-train/01-finetune.ipynb
@@ -109,7 +109,7 @@
      "text": [
       "[Using transformers version: 4.21.0]\n",
       "[Using datasets version: 2.9.0]\n",
-      "[Using torch version: 1.13.1+cu117]\n",
+      "[Using torch version: 1.12.1+cu113]\n",
       "[Using wandb version: 0.13.10]\n"
      ]
     }
@@ -183,11 +183,11 @@
       "DatasetDict({\n",
       "    train: Dataset({\n",
       "        features: ['input_ids', 'token_type_ids', 'labels'],\n",
-      "        num_rows: 59147\n",
+      "        num_rows: 93171\n",
       "    })\n",
       "    validation: Dataset({\n",
       "        features: ['input_ids', 'token_type_ids', 'labels'],\n",
-      "        num_rows: 6572\n",
+      "        num_rows: 10353\n",
       "    })\n",
       "})\n"
      ]
@@ -196,8 +196,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.31 s, sys: 1.81 s, total: 4.12 s\n",
-      "Wall time: 2min 18s\n"
+      "CPU times: user 1.49 s, sys: 256 ms, total: 1.75 s\n",
+      "Wall time: 1.77 s\n"
      ]
     }
    ],
@@ -329,8 +329,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 17.1 s, sys: 5.14 s, total: 22.2 s\n",
-      "Wall time: 7.98 s\n"
+      "CPU times: user 17.7 s, sys: 5.65 s, total: 23.4 s\n",
+      "Wall time: 9.17 s\n"
      ]
     }
    ],
@@ -361,7 +361,7 @@
    },
    "outputs": [],
    "source": [
-    "TRAIN_EPOCHS = 10\n",
+    "TRAIN_EPOCHS = 5\n",
     "TRAIN_BATCH_SIZE = 4\n",
     "EVAL_BATCH_SIZE = 4\n",
     "LOGGING_STEPS = 64\n",
@@ -432,12 +432,12 @@
      "output_type": "stream",
      "text": [
       "***** Running training *****\n",
-      "  Num examples = 59147\n",
-      "  Num Epochs = 10\n",
+      "  Num examples = 93171\n",
+      "  Num Epochs = 5\n",
       "  Instantaneous batch size per device = 4\n",
       "  Total train batch size (w. parallel, distributed & accumulation) = 32\n",
       "  Gradient Accumulation steps = 1\n",
-      "  Total optimization steps = 18490\n",
+      "  Total optimization steps = 14560\n",
       "Automatic Weights & Biases logging enabled, to disable set os.environ[\"WANDB_DISABLED\"] = \"true\"\n",
       "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mshankar-arunp\u001b[0m. Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
      ]
@@ -457,7 +457,7 @@
     {
      "data": {
       "text/html": [
-       "Run data is saved locally in <code>/root/multi-turn-chatbot-gpt-sagemaker/02-train/wandb/run-20230219_074626-gupsw8fw</code>"
+       "Run data is saved locally in <code>/root/multi-turn-chatbot-gpt-sagemaker/02-train/wandb/run-20230220_142405-waop9mdh</code>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -469,7 +469,7 @@
     {
      "data": {
       "text/html": [
-       "Syncing run <strong><a href='https://wandb.ai/shankar-arunp/huggingface/runs/gupsw8fw' target=\"_blank\">./model</a></strong> to <a href='https://wandb.ai/shankar-arunp/huggingface' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
+       "Syncing run <strong><a href='https://wandb.ai/shankar-arunp/huggingface/runs/waop9mdh' target=\"_blank\">./model</a></strong> to <a href='https://wandb.ai/shankar-arunp/huggingface' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -493,7 +493,7 @@
     {
      "data": {
       "text/html": [
-       " View run at <a href='https://wandb.ai/shankar-arunp/huggingface/runs/gupsw8fw' target=\"_blank\">https://wandb.ai/shankar-arunp/huggingface/runs/gupsw8fw</a>"
+       " View run at <a href='https://wandb.ai/shankar-arunp/huggingface/runs/waop9mdh' target=\"_blank\">https://wandb.ai/shankar-arunp/huggingface/runs/waop9mdh</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -503,25 +503,20 @@
      "output_type": "display_data"
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:root:Using NamedTuple = typing._NamedTuple instead.\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-02-19 07:46:35.251 pytorch-1-13-gpu--ml-p3dn-24xlarge-8074c3648d51bc88d30c560a1061:18969 INFO utils.py:28] RULE_JOB_STOP_SIGNAL_FILENAME: None\n",
-      "[2023-02-19 07:46:35.271 pytorch-1-13-gpu--ml-p3dn-24xlarge-8074c3648d51bc88d30c560a1061:18969 INFO profiler_config_parser.py:111] Unable to find config at /opt/ml/input/config/profilerconfig.json. Profiler is disabled.\n"
+      "[2023-02-20 14:24:15.660 pytorch-1-12-gpu--ml-p3dn-24xlarge-307ebad80d11874f5dcc2ce687db:59073 INFO utils.py:28] RULE_JOB_STOP_SIGNAL_FILENAME: None\n",
+      "[2023-02-20 14:24:15.785 pytorch-1-12-gpu--ml-p3dn-24xlarge-307ebad80d11874f5dcc2ce687db:59073 INFO profiler_config_parser.py:111] Unable to find config at /opt/ml/input/config/profilerconfig.json. Profiler is disabled.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/conda/lib/python3.9/site-packages/torch/nn/parallel/_functions.py:68: UserWarning: Was asked to gather along dimension 0, but all input tensors were scalars; will instead unsqueeze and return a vector.\n",
+      "/opt/conda/lib/python3.8/site-packages/smdebug-1.0.24b20230214-py3.8.egg/smdebug/profiler/system_metrics_reader.py:78: SyntaxWarning: \"is not\" with a literal. Did you mean \"!=\"?\n",
+      "/opt/conda/lib/python3.8/site-packages/smdebug-1.0.24b20230214-py3.8.egg/smdebug/profiler/system_metrics_reader.py:78: SyntaxWarning: \"is not\" with a literal. Did you mean \"!=\"?\n",
+      "/opt/conda/lib/python3.8/site-packages/torch/nn/parallel/_functions.py:68: UserWarning: Was asked to gather along dimension 0, but all input tensors were scalars; will instead unsqueeze and return a vector.\n",
       "  warnings.warn('Was asked to gather along dimension 0, but all '\n"
      ]
     },
@@ -531,8 +526,8 @@
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='18490' max='18490' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [18490/18490 4:29:46, Epoch 10/10]\n",
+       "      <progress value='14560' max='14560' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [14560/14560 2:33:30, Epoch 5/5]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -545,53 +540,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>0.113200</td>\n",
-       "      <td>0.113472</td>\n",
+       "      <td>0.173400</td>\n",
+       "      <td>0.173809</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>0.105200</td>\n",
-       "      <td>0.106144</td>\n",
+       "      <td>0.162800</td>\n",
+       "      <td>0.169528</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>0.100200</td>\n",
-       "      <td>0.102726</td>\n",
+       "      <td>0.151400</td>\n",
+       "      <td>0.168145</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>0.098400</td>\n",
-       "      <td>0.100338</td>\n",
+       "      <td>0.148200</td>\n",
+       "      <td>0.168529</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>5</td>\n",
-       "      <td>0.093900</td>\n",
-       "      <td>0.099107</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>6</td>\n",
-       "      <td>0.091000</td>\n",
-       "      <td>0.098436</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>7</td>\n",
-       "      <td>0.088800</td>\n",
-       "      <td>0.097934</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>8</td>\n",
-       "      <td>0.088700</td>\n",
-       "      <td>0.098124</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>9</td>\n",
-       "      <td>0.086100</td>\n",
-       "      <td>0.097971</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>10</td>\n",
-       "      <td>0.082500</td>\n",
-       "      <td>0.098316</td>\n",
+       "      <td>0.145000</td>\n",
+       "      <td>0.169217</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
@@ -608,39 +578,24 @@
      "output_type": "stream",
      "text": [
       "***** Running Evaluation *****\n",
-      "  Num examples = 6572\n",
+      "  Num examples = 10353\n",
       "  Batch size = 32\n",
       "***** Running Evaluation *****\n",
-      "  Num examples = 6572\n",
+      "  Num examples = 10353\n",
       "  Batch size = 32\n",
       "***** Running Evaluation *****\n",
-      "  Num examples = 6572\n",
-      "  Batch size = 32\n",
-      "***** Running Evaluation *****\n",
-      "  Num examples = 6572\n",
-      "  Batch size = 32\n",
-      "***** Running Evaluation *****\n",
-      "  Num examples = 6572\n",
+      "  Num examples = 10353\n",
       "  Batch size = 32\n",
       "Saving model checkpoint to ./model/checkpoint-10240\n",
       "Configuration saved in ./model/checkpoint-10240/config.json\n",
       "Model weights saved in ./model/checkpoint-10240/pytorch_model.bin\n",
-      "/opt/conda/lib/python3.9/site-packages/torch/nn/parallel/_functions.py:68: UserWarning: Was asked to gather along dimension 0, but all input tensors were scalars; will instead unsqueeze and return a vector.\n",
+      "/opt/conda/lib/python3.8/site-packages/torch/nn/parallel/_functions.py:68: UserWarning: Was asked to gather along dimension 0, but all input tensors were scalars; will instead unsqueeze and return a vector.\n",
       "  warnings.warn('Was asked to gather along dimension 0, but all '\n",
       "***** Running Evaluation *****\n",
-      "  Num examples = 6572\n",
+      "  Num examples = 10353\n",
       "  Batch size = 32\n",
       "***** Running Evaluation *****\n",
-      "  Num examples = 6572\n",
-      "  Batch size = 32\n",
-      "***** Running Evaluation *****\n",
-      "  Num examples = 6572\n",
-      "  Batch size = 32\n",
-      "***** Running Evaluation *****\n",
-      "  Num examples = 6572\n",
-      "  Batch size = 32\n",
-      "***** Running Evaluation *****\n",
-      "  Num examples = 6572\n",
+      "  Num examples = 10353\n",
       "  Batch size = 32\n",
       "\n",
       "\n",
@@ -653,14 +608,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 5h 34min 59s, sys: 2h 27min 15s, total: 8h 2min 14s\n",
-      "Wall time: 4h 30min 9s\n"
+      "CPU times: user 3h 43min 11s, sys: 1h 28min 36s, total: 5h 11min 48s\n",
+      "Wall time: 2h 34min 4s\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "TrainOutput(global_step=18490, training_loss=0.10060630164448153, metrics={'train_runtime': 16208.8665, 'train_samples_per_second': 36.491, 'train_steps_per_second': 1.141, 'total_flos': 1.6807492609256448e+17, 'train_loss': 0.10060630164448153, 'epoch': 10.0})"
+       "TrainOutput(global_step=14560, training_loss=0.17299925432755398, metrics={'train_runtime': 9243.9629, 'train_samples_per_second': 50.396, 'train_steps_per_second': 1.575, 'total_flos': 6.702161390226432e+16, 'train_loss': 0.17299925432755398, 'epoch': 5.0})"
       ]
      },
      "execution_count": 19,
@@ -692,9 +647,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Saving model checkpoint to ./model/chatbot\n",
-      "Configuration saved in ./model/chatbot/config.json\n",
-      "Model weights saved in ./model/chatbot/pytorch_model.bin\n"
+      "Saving model checkpoint to ./model\n",
+      "Configuration saved in ./model/config.json\n",
+      "Model weights saved in ./model/pytorch_model.bin\n"
      ]
     }
    ],
@@ -1200,10 +1155,11 @@
     "vcpuNum": 192
    }
   ],
+  "instance_type": "ml.p3dn.24xlarge",
   "kernelspec": {
-   "display_name": "Python 3 (PyTorch 1.13 Python 3.9 GPU Optimized)",
+   "display_name": "Python 3 (PyTorch 1.12 Python 3.8 GPU Optimized)",
    "language": "python",
-   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:us-east-1:081325390199:image/pytorch-1.13-gpu-py39"
+   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:us-east-1:081325390199:image/pytorch-1.12-gpu-py38"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1215,7 +1171,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
