--- a/03-evaluate/01-evaluate.ipynb
+++ b/03-evaluate/01-evaluate.ipynb
@@ -105,7 +105,7 @@
      "output_type": "stream",
      "text": [
       "[Using transformers version: 4.21.0]\n",
-      "[Using torch version: 1.13.1+cu117]\n"
+      "[Using torch version: 1.12.1+cu113]\n"
      ]
     }
    ],
@@ -241,26 +241,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4f72bb01-635c-4046-ab70-0e7bf01c227e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "raw",
-   "id": "f527631b-c572-4fca-bf34-0781cbda6a30",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "raw",
-   "id": "d989d1d4-32b9-49a0-b692-e119a70531d3",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 11,
    "id": "4db1edd7-f766-4048-8111-f67195f1158e",
    "metadata": {
@@ -325,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "id": "eb3a93a1-67d7-4501-9b5e-13f75b630989",
    "metadata": {
     "tags": []
@@ -366,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "id": "5b9390c0-cb7f-4c78-8835-543eb7943c83",
    "metadata": {
     "tags": []
@@ -374,12 +354,12 @@
    "outputs": [],
    "source": [
     "MAX_LEN = 128\n",
-    "TOP_P = 0.8"
+    "TOP_P = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 47,
    "id": "f70feffb-b36f-480f-aca4-f62cc262c828",
    "metadata": {
     "tags": []
@@ -426,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 48,
    "id": "51a3b11a-4dfc-471e-870e-88abe53d6f89",
    "metadata": {
     "tags": []
@@ -434,12 +414,12 @@
    "outputs": [],
    "source": [
     "RESET_CMD = 'reset'\n",
-    "MAX_TURNS = 10"
+    "MAX_TURNS = 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 49,
    "id": "06a8d312-919f-4ed0-97ba-9c33dfa2b703",
    "metadata": {},
    "outputs": [],
@@ -484,7 +464,20 @@
     "        input_ids = torch.LongTensor(input_ids).unsqueeze(0).to(device)\n",
     "        token_type_ids = torch.LongTensor(token_type_ids).unsqueeze(0).to(device)\n",
     "        \n",
-    "        output_ids = nucleus_sampling(input_ids, token_type_ids, input_len)   \n",
+    "        #output_ids = nucleus_sampling(input_ids, token_type_ids, input_len)   \n",
+    "        \n",
+    "        \n",
+    "        output_ids = model.generate(input_ids=input_ids, \n",
+    "                                    token_type_ids=token_type_ids, \n",
+    "                                    pad_token_id=eos_id, \n",
+    "                                    do_sample=True, \n",
+    "                                    top_p=TOP_P, \n",
+    "                                    max_length=MAX_LEN, \n",
+    "                                    output_hidden_states=True, \n",
+    "                                    output_scores=True, \n",
+    "                                    return_dict_in_generate=True).sequences\n",
+    "\n",
+    "        output_ids = output_ids[0].tolist()[input_len:]        \n",
     "        response = tokenizer.decode(output_ids, skip_special_tokens=True)\n",
     "        print(f'Bot: {response}')\n",
     "        query_history.append([speaker_2_id] + tokenizer.encode(response))    "
@@ -492,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 50,
    "id": "c6a69896-4604-4435-a368-b4ab8ac0ee35",
    "metadata": {
     "tags": []
@@ -520,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 51,
    "id": "14fa27e7-2be4-453b-b7f7-d25419fb8dbb",
    "metadata": {
     "tags": []
@@ -538,98 +531,57 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "You:  hello bot\n"
+      "You:  hi\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bot: what is this afternoon\n"
+      "tensor([[50257, 50258,  5303, 50259, 31373,   764,   703,   389,   345,  5633,\n",
+      "         50256]], device='cuda:0')\n",
+      "<class 'torch.Tensor'>\n",
+      "[31373, 764, 703, 389, 345, 5633, 50256]\n",
+      "Bot: hello. how are you?\n"
      ]
     },
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "You:  sad and sleepy\n"
+      "You:  i am very good\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bot: i?\n"
+      "tensor([[50257, 50259, 31373,    13,   703,   389,   345,    30, 50258,    72,\n",
+      "           716,   845,   922, 50259,    72,   588,  1016,   284,   262, 11550,\n",
+      "         10908,   284,  1394,  4197,   764, 50256]], device='cuda:0')\n",
+      "<class 'torch.Tensor'>\n",
+      "[72, 588, 1016, 284, 262, 11550, 10908, 284, 1394, 4197, 764, 50256]\n",
+      "Bot: i like going to the gym everyday to keep fit.\n"
      ]
     },
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "You:  what about you?\n"
+      "You:  i should do it too!\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bot: you are awake.\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "You:  Yes, I am \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bot: in\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "You:  my sleep\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bot: i\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "You:  be more elaborate\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bot: i\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "You:  boring\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bot: that is\n"
+      "tensor([[50257, 50259,    72,   588,  1016,   284,   262, 11550, 10908,   284,\n",
+      "          1394,  4197,    13, 50258,    72,   815,   466,   340,  1165,     0,\n",
+      "         50259, 43911,   706,   281,  8855,   287,  8591,   764, 50256]],\n",
+      "       device='cuda:0')\n",
+      "<class 'torch.Tensor'>\n",
+      "[43911, 706, 281, 8855, 287, 8591, 764, 50256]\n",
+      "Bot: morning after an adventure in la.\n"
      ]
     },
     {
@@ -654,14 +606,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "446c6189-716e-4d8c-92b5-748bf10e031f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "6c6f014a-749a-4338-8882-99f9a9cbce4f",
    "metadata": {},
    "outputs": [],
@@ -671,6 +615,46 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a707fe9c-99d2-4aac-ac87-c2e726b4715c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e05d27cc-0ec5-4d17-b5c5-648d911de17b",
+   "metadata": {},
+   "source": [
+    "### Evaluate directly from the model "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab491edd-c358-4de3-a97a-2be774def809",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1dba3898-c2c7-4040-981f-60b071265187",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c0cd739-7708-40a3-965c-18205a79ce01",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f1263ff-408d-4ab4-9d4e-7dd2affbbd23",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1165,10 +1149,11 @@
     "vcpuNum": 192
    }
   ],
+  "instance_type": "ml.g4dn.4xlarge",
   "kernelspec": {
-   "display_name": "Python 3 (PyTorch 1.13 Python 3.9 GPU Optimized)",
+   "display_name": "Python 3 (PyTorch 1.12 Python 3.8 GPU Optimized)",
    "language": "python",
-   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:us-east-1:081325390199:image/pytorch-1.13-gpu-py39"
+   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:us-east-1:081325390199:image/pytorch-1.12-gpu-py38"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1180,7 +1165,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
