--- a/03-evaluate/01-evaluate.ipynb
+++ b/03-evaluate/01-evaluate.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "33bf3309-ea9f-46c2-b84b-ae36c7f1247b",
    "metadata": {
     "tags": []
@@ -43,7 +43,6 @@
    "source": [
     "from transformers import AutoTokenizer\n",
     "from torch.nn import functional as F\n",
-    "from getpass import getpass\n",
     "from itertools import chain\n",
     "import transformers \n",
     "import logging\n",
@@ -52,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "af530362-4671-4a5b-959a-5eb676fe537f",
    "metadata": {
     "tags": []
@@ -72,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "646e35a4-0e2a-447b-ada2-a3a9fe78d78b",
    "metadata": {
     "tags": []
@@ -94,41 +93,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "b98a5c12-728d-4a46-86a8-6885ebb43163",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Using transformers version: 4.21.0]\n",
-      "[Using torch version: 1.12.1+cu113]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "logger.info(f'[Using transformers version: {transformers.__version__}]')\n",
     "logger.info(f'[Using torch version: {torch.__version__}]')"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "74a9f9ba-e7ff-435d-b089-8141588c8f72",
-   "metadata": {},
-   "source": [
-    "#### Setup essentials "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cbc4a469-aad6-451a-aff9-ebf59ede6e1e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -140,20 +114,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "48f37987-5311-40db-8995-183c00573e0b",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "PreTrainedTokenizerFast(name_or_path='EleutherAI/gpt-neo-125M', vocab_size=50257, model_max_len=2048, is_fast=True, padding_side='right', truncation_side='right', special_tokens={'bos_token': AddedToken(\"<|endoftext|>\", rstrip=False, lstrip=False, single_word=False, normalized=True), 'eos_token': AddedToken(\"<|endoftext|>\", rstrip=False, lstrip=False, single_word=False, normalized=True), 'unk_token': AddedToken(\"<|endoftext|>\", rstrip=False, lstrip=False, single_word=False, normalized=True)})\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "tokenizer = AutoTokenizer.from_pretrained('EleutherAI/gpt-neo-125M')\n",
     "logger.info(tokenizer)"
@@ -161,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "947779cd-ba55-402f-9958-eacdd21f1ce5",
    "metadata": {
     "tags": []
@@ -176,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "5f7cd127-51b4-48a3-a1bb-af52aff5f27b",
    "metadata": {
     "tags": []
@@ -189,20 +155,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "8740f8e2-4d5e-4085-b7aa-c5e2ce5e365f",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "PreTrainedTokenizerFast(name_or_path='EleutherAI/gpt-neo-125M', vocab_size=50257, model_max_len=2048, is_fast=True, padding_side='right', truncation_side='right', special_tokens={'bos_token': '<|startoftext|>', 'eos_token': AddedToken(\"<|endoftext|>\", rstrip=False, lstrip=False, single_word=False, normalized=True), 'unk_token': AddedToken(\"<|endoftext|>\", rstrip=False, lstrip=False, single_word=False, normalized=True), 'additional_special_tokens': ['<|speaker-1|>', '<|speaker-2|>', '<|pad|>', '<|mask|>']})\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "logger.info(tokenizer)"
    ]
@@ -212,25 +170,17 @@
    "id": "4af3ba74-7c20-45a9-9ae9-75cea8bbebf2",
    "metadata": {},
    "source": [
-    "#### Load model "
+    "#### Load fine-tuned GPT-Neo model "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "97106876-4e08-4db4-b236-438b1654c45a",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "cuda:0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = transformers.AutoModelForCausalLM.from_pretrained('./../02-train/model')\n",
     "model.resize_token_embeddings(len(vocab))\n",
@@ -241,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "4db1edd7-f766-4048-8111-f67195f1158e",
    "metadata": {
     "tags": []
@@ -261,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "fd5b48b8-878e-4d40-9753-9356bd467f42",
    "metadata": {
     "tags": []
@@ -277,24 +227,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "1a67f0e0-d459-4da4-b224-535e2a60066b",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "bos_id = 50257\n",
-      "eos_id = 50256\n",
-      "speaker_1_id = 50258\n",
-      "speaker_2_id = 50259\n",
-      "mask = 50261\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "logger.info(f'bos_id = {bos_id}')\n",
     "logger.info(f'eos_id = {eos_id}')\n",
@@ -305,48 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "eb3a93a1-67d7-4501-9b5e-13f75b630989",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "def tokenize(query: str) -> (torch.LongTensor, torch.LongTensor, int):\n",
-    "    # Initialize empty list to store input ids for each turn\n",
-    "    input_ids_turns = []\n",
-    "    \n",
-    "    # Add speaker 1 id to start of query and encode it using the tokenizer\n",
-    "    input_ids = tokenizer.encode(query)\n",
-    "    input_ids = [speaker_1_id] + input_ids\n",
-    "    input_ids_turns.append(input_ids)\n",
-    "    \n",
-    "    # Add beginning of sequence and end of sequence ids to input_ids, and convert it to a tensor\n",
-    "    input_ids = [bos_id] + list(chain.from_iterable(input_ids_turns)) + [speaker_2_id]\n",
-    "    \n",
-    "    # Determine the speaker of the first turn based on the first speaker id\n",
-    "    start_sp_id = input_ids_turns[0][0]\n",
-    "    # Determine the speaker of the next turn\n",
-    "    next_sp_id = speaker_1_id if start_sp_id == speaker_2_id else speaker_2_id\n",
-    "    \n",
-    "    # Create token type ids for each turn based on the speaker of the turn\n",
-    "    token_type_ids = [[start_sp_id] * len(turn) if h % 2 == 0 else [next_sp_id] * len(turn) for h, turn in enumerate(input_ids_turns)]\n",
-    "    \n",
-    "    # Add beginning of sequence and end of sequence ids to token_type_ids, and convert it to a tensor\n",
-    "    token_type_ids = [start_sp_id] + list(chain.from_iterable(token_type_ids)) + [speaker_2_id]\n",
-    "    \n",
-    "    # Determine the length of the input_ids tensor\n",
-    "    input_len = len(input_ids)\n",
-    "    \n",
-    "    input_ids = torch.LongTensor(input_ids).unsqueeze(0).to(device)\n",
-    "    token_type_ids = torch.LongTensor(token_type_ids).unsqueeze(0).to(device)\n",
-    "    \n",
-    "    return input_ids, token_type_ids, input_len"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "5b9390c0-cb7f-4c78-8835-543eb7943c83",
    "metadata": {
     "tags": []
@@ -359,40 +256,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "f70feffb-b36f-480f-aca4-f62cc262c828",
-   "metadata": {
-    "tags": []
-   },
+   "execution_count": null,
+   "id": "29f4e6b0-8e58-4bbb-b9bd-241c2d48cdbb",
+   "metadata": {},
    "outputs": [],
    "source": [
     "def nucleus_sampling(input_ids, token_type_ids, input_len) -> str:\n",
     "    output_ids = []\n",
     "    \n",
+    "    # iterate over the maximum possible length of the generated sequence\n",
     "    for i in range(input_len, MAX_LEN):\n",
+    "        # get the model's output for the next token\n",
     "        output = model(input_ids=input_ids, token_type_ids=token_type_ids)[0][:, i-1]\n",
-    "        # Apply the softmax function to the logits\n",
+    "        \n",
+    "        # apply the softmax function to convert the output logits into probabilities\n",
     "        probs = F.softmax(output, dim=-1)\n",
     "\n",
+    "        # sort the probabilities in descending order\n",
     "        sorted_probs, sorted_idxs = torch.sort(probs, descending=True)\n",
+    "        \n",
+    "        # compute the cumulative sum of probabilities\n",
     "        cumsum_probs = torch.cumsum(sorted_probs, dim=-1)  # (1, V)\n",
     " \n",
+    "        # identify the indices to remove (i.e., those with cumsum greater than the given probability threshold)\n",
     "        idx_remove = cumsum_probs > TOP_P\n",
     "        idx_remove[:, 1:] = idx_remove[:, :-1].clone()\n",
     "        idx_remove[:, 0] = False\n",
+    "        \n",
+    "        # zero out the probabilities of the indices to remove, then renormalize the probabilities\n",
     "        sorted_probs[idx_remove] = 0.0\n",
     "        sorted_probs /= torch.sum(sorted_probs, dim=-1, keepdim=True)\n",
     "        probs = torch.zeros(output.shape, device=device).scatter_(-1, sorted_idxs, sorted_probs)\n",
+    "        \n",
+    "        # sample the next token from the probability distribution\n",
     "        idx = torch.multinomial(probs, num_samples=1)\n",
     "        idx_item = idx.squeeze(-1).squeeze(-1).item()\n",
+    "        \n",
+    "        # add the sampled token to the list of output ids\n",
     "        output_ids.append(idx_item)\n",
     "        \n",
+    "        # stop generation if the end-of-sequence token is generated\n",
     "        if idx_item == eos_id:\n",
     "            break\n",
     "\n",
+    "        # update the input ids and token type ids for the next iteration\n",
     "        input_ids = torch.cat((input_ids, idx), dim=-1)\n",
     "        next_type_id = torch.LongTensor([[speaker_2_id]]).to(device)\n",
     "        token_type_ids = torch.cat((token_type_ids, next_type_id), dim=-1)\n",
+    "        \n",
     "    return output_ids"
    ]
   },
@@ -401,25 +312,25 @@
    "id": "2ff3e406-9169-4280-8173-58f63e9c42f4",
    "metadata": {},
    "source": [
-    "#### Interactive Chat "
+    "### Interactive Chat "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "51a3b11a-4dfc-471e-870e-88abe53d6f89",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "RESET_CMD = 'reset'\n",
+    "RESET_PROMPT = 'reset'\n",
     "MAX_TURNS = 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "06a8d312-919f-4ed0-97ba-9c33dfa2b703",
    "metadata": {},
    "outputs": [],
@@ -427,11 +338,14 @@
     "def chat():\n",
     "    logger.info('[Entering chat session ...]')\n",
     "    logger.info(f'To quit the conversation and reset memory, please type \"{RESET_CMD}\"')\n",
+    "    \n",
     "    query_history = []\n",
     "            \n",
     "    while True:\n",
     "        utterance = input('You: ')\n",
-    "        if utterance == RESET_CMD:\n",
+    "        \n",
+    "        # Exit session if user types the RESET prompt\n",
+    "        if utterance == RESET_PROMPT:\n",
     "            logger.info(f'[Exiting chat session]')\n",
     "            break\n",
     "            \n",
@@ -460,13 +374,14 @@
     "\n",
     "        # Determine the length of the input_ids tensor\n",
     "        input_len = len(input_ids)\n",
-    "\n",
+    "        \n",
+    "        # Convert input_ids and token_type_ids to PyTorch tensors, add an extra dimension, and move to the device (GPU)\n",
     "        input_ids = torch.LongTensor(input_ids).unsqueeze(0).to(device)\n",
     "        token_type_ids = torch.LongTensor(token_type_ids).unsqueeze(0).to(device)\n",
     "        \n",
     "        #output_ids = nucleus_sampling(input_ids, token_type_ids, input_len)   \n",
     "        \n",
-    "        \n",
+    "        # generate a response from the model given some input\n",
     "        output_ids = model.generate(input_ids=input_ids, \n",
     "                                    token_type_ids=token_type_ids, \n",
     "                                    pad_token_id=eos_id, \n",
@@ -476,180 +391,29 @@
     "                                    output_hidden_states=True, \n",
     "                                    output_scores=True, \n",
     "                                    return_dict_in_generate=True).sequences\n",
-    "\n",
-    "        output_ids = output_ids[0].tolist()[input_len:]        \n",
+    "        \n",
+    "        # extract the generated sequence from the output and remove the input sequence\n",
+    "        output_ids = output_ids[0].tolist()[input_len:]\n",
+    "        \n",
+    "        # convert the generated sequence of token ids into text\n",
     "        response = tokenizer.decode(output_ids, skip_special_tokens=True)\n",
     "        print(f'Bot: {response}')\n",
+    "        \n",
+    "        # append the generated sequence to the query history as token ids\n",
     "        query_history.append([speaker_2_id] + tokenizer.encode(response))    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "c6a69896-4604-4435-a368-b4ab8ac0ee35",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "bos_id = 50257\n",
-      "eos_id = 50256\n",
-      "speaker_1_id = 50258\n",
-      "speaker_2_id = 50259\n",
-      "mask = 50261\n"
-     ]
-    }
-   ],
-   "source": [
-    "logger.info(f'bos_id = {bos_id}')\n",
-    "logger.info(f'eos_id = {eos_id}')\n",
-    "logger.info(f'speaker_1_id = {speaker_1_id}')\n",
-    "logger.info(f'speaker_2_id = {speaker_2_id}')\n",
-    "logger.info(f'mask = {mask}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "14fa27e7-2be4-453b-b7f7-d25419fb8dbb",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Entering chat session ...]\n",
-      "To quit the conversation and reset memory, please type \"reset\"\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "You:  hi\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[50257, 50258,  5303, 50259, 31373,   764,   703,   389,   345,  5633,\n",
-      "         50256]], device='cuda:0')\n",
-      "<class 'torch.Tensor'>\n",
-      "[31373, 764, 703, 389, 345, 5633, 50256]\n",
-      "Bot: hello. how are you?\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "You:  i am very good\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[50257, 50259, 31373,    13,   703,   389,   345,    30, 50258,    72,\n",
-      "           716,   845,   922, 50259,    72,   588,  1016,   284,   262, 11550,\n",
-      "         10908,   284,  1394,  4197,   764, 50256]], device='cuda:0')\n",
-      "<class 'torch.Tensor'>\n",
-      "[72, 588, 1016, 284, 262, 11550, 10908, 284, 1394, 4197, 764, 50256]\n",
-      "Bot: i like going to the gym everyday to keep fit.\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "You:  i should do it too!\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[50257, 50259,    72,   588,  1016,   284,   262, 11550, 10908,   284,\n",
-      "          1394,  4197,    13, 50258,    72,   815,   466,   340,  1165,     0,\n",
-      "         50259, 43911,   706,   281,  8855,   287,  8591,   764, 50256]],\n",
-      "       device='cuda:0')\n",
-      "<class 'torch.Tensor'>\n",
-      "[43911, 706, 281, 8855, 287, 8591, 764, 50256]\n",
-      "Bot: morning after an adventure in la.\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "You:  reset\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Exiting chat session]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "chat()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6c6f014a-749a-4338-8882-99f9a9cbce4f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a707fe9c-99d2-4aac-ac87-c2e726b4715c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e05d27cc-0ec5-4d17-b5c5-648d911de17b",
-   "metadata": {},
-   "source": [
-    "### Evaluate directly from the model "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ab491edd-c358-4de3-a97a-2be774def809",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1dba3898-c2c7-4040-981f-60b071265187",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2c0cd739-7708-40a3-965c-18205a79ce01",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
