--- a/03-evaluate/01-evaluate.ipynb
+++ b/03-evaluate/01-evaluate.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "33bf3309-ea9f-46c2-b84b-ae36c7f1247b",
    "metadata": {
     "tags": []
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "af530362-4671-4a5b-959a-5eb676fe537f",
    "metadata": {
     "tags": []
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "646e35a4-0e2a-447b-ada2-a3a9fe78d78b",
    "metadata": {
     "tags": []
@@ -93,12 +93,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "b98a5c12-728d-4a46-86a8-6885ebb43163",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Using transformers version: 4.21.0]\n",
+      "[Using torch version: 1.12.1+cu113]\n"
+     ]
+    }
+   ],
    "source": [
     "logger.info(f'[Using transformers version: {transformers.__version__}]')\n",
     "logger.info(f'[Using torch version: {torch.__version__}]')"
@@ -114,12 +123,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "48f37987-5311-40db-8995-183c00573e0b",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "PreTrainedTokenizerFast(name_or_path='EleutherAI/gpt-neo-125M', vocab_size=50257, model_max_len=2048, is_fast=True, padding_side='right', truncation_side='right', special_tokens={'bos_token': AddedToken(\"<|endoftext|>\", rstrip=False, lstrip=False, single_word=False, normalized=True), 'eos_token': AddedToken(\"<|endoftext|>\", rstrip=False, lstrip=False, single_word=False, normalized=True), 'unk_token': AddedToken(\"<|endoftext|>\", rstrip=False, lstrip=False, single_word=False, normalized=True)})\n"
+     ]
+    }
+   ],
    "source": [
     "tokenizer = AutoTokenizer.from_pretrained('EleutherAI/gpt-neo-125M')\n",
     "logger.info(tokenizer)"
@@ -127,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "947779cd-ba55-402f-9958-eacdd21f1ce5",
    "metadata": {
     "tags": []
@@ -142,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "5f7cd127-51b4-48a3-a1bb-af52aff5f27b",
    "metadata": {
     "tags": []
@@ -155,12 +172,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "8740f8e2-4d5e-4085-b7aa-c5e2ce5e365f",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "PreTrainedTokenizerFast(name_or_path='EleutherAI/gpt-neo-125M', vocab_size=50257, model_max_len=2048, is_fast=True, padding_side='right', truncation_side='right', special_tokens={'bos_token': '<|startoftext|>', 'eos_token': AddedToken(\"<|endoftext|>\", rstrip=False, lstrip=False, single_word=False, normalized=True), 'unk_token': AddedToken(\"<|endoftext|>\", rstrip=False, lstrip=False, single_word=False, normalized=True), 'additional_special_tokens': ['<|speaker-1|>', '<|speaker-2|>', '<|pad|>', '<|mask|>']})\n"
+     ]
+    }
+   ],
    "source": [
     "logger.info(tokenizer)"
    ]
@@ -175,12 +200,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "97106876-4e08-4db4-b236-438b1654c45a",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "cuda:0\n"
+     ]
+    }
+   ],
    "source": [
     "model = transformers.AutoModelForCausalLM.from_pretrained('./../02-train/model')\n",
     "model.resize_token_embeddings(len(vocab))\n",
@@ -191,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "4db1edd7-f766-4048-8111-f67195f1158e",
    "metadata": {
     "tags": []
@@ -211,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "fd5b48b8-878e-4d40-9753-9356bd467f42",
    "metadata": {
     "tags": []
@@ -227,12 +260,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "1a67f0e0-d459-4da4-b224-535e2a60066b",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "bos_id = 50257\n",
+      "eos_id = 50256\n",
+      "speaker_1_id = 50258\n",
+      "speaker_2_id = 50259\n",
+      "mask = 50261\n"
+     ]
+    }
+   ],
    "source": [
     "logger.info(f'bos_id = {bos_id}')\n",
     "logger.info(f'eos_id = {eos_id}')\n",
@@ -243,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "5b9390c0-cb7f-4c78-8835-543eb7943c83",
    "metadata": {
     "tags": []
@@ -256,9 +301,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "29f4e6b0-8e58-4bbb-b9bd-241c2d48cdbb",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def nucleus_sampling(input_ids, token_type_ids, input_len) -> str:\n",
@@ -317,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "51a3b11a-4dfc-471e-870e-88abe53d6f89",
    "metadata": {
     "tags": []
@@ -330,14 +377,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "06a8d312-919f-4ed0-97ba-9c33dfa2b703",
    "metadata": {},
    "outputs": [],
    "source": [
     "def chat():\n",
     "    logger.info('[Entering chat session ...]')\n",
-    "    logger.info(f'To quit the conversation and reset memory, please type \"{RESET_CMD}\"')\n",
+    "    logger.info(f'To quit the conversation and reset memory, please type \"{RESET_PROMPT}\"')\n",
     "    \n",
     "    query_history = []\n",
     "            \n",
@@ -410,7 +457,86 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Entering chat session ...]\n",
+      "To quit the conversation and reset memory, please type \"reset\"\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "You:  hi how are you\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bot: hello how are you\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "You:  i am very good\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bot: i am sorry to hear that\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "You:  why are you sorry ?!\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bot: i am sick of it.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "You:  sick of what ?\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bot: for example i eat sushi a lot.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "You:  lol :)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bot: not me!\n"
+     ]
+    }
+   ],
    "source": [
     "chat()"
    ]
