--- a/03-evaluate/01-evaluate.ipynb
+++ b/03-evaluate/01-evaluate.ipynb
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "14fa27e7-2be4-453b-b7f7-d25419fb8dbb",
    "metadata": {
     "tags": []
@@ -534,6 +534,20 @@
      "output_type": "stream",
      "text": [
       "Bot: not me!\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "You:  reset\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Exiting chat session]\n"
      ]
     }
    ],
