--- a/03-evaluate/01-evaluate.ipynb
+++ b/03-evaluate/01-evaluate.ipynb
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "5b9390c0-cb7f-4c78-8835-543eb7943c83",
    "metadata": {
     "tags": []
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "29f4e6b0-8e58-4bbb-b9bd-241c2d48cdbb",
    "metadata": {
     "tags": []
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "id": "51a3b11a-4dfc-471e-870e-88abe53d6f89",
    "metadata": {
     "tags": []
@@ -372,12 +372,12 @@
    "outputs": [],
    "source": [
     "RESET_PROMPT = 'reset'\n",
-    "MAX_TURNS = 3"
+    "MAX_TURNS = 4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 37,
    "id": "06a8d312-919f-4ed0-97ba-9c33dfa2b703",
    "metadata": {},
    "outputs": [],
@@ -402,7 +402,7 @@
     "        query_history.append(input_ids)\n",
     "        \n",
     "        if len(query_history) >= MAX_TURNS:\n",
-    "            num_exceeded = len(query_history) - MAX_TURNS + 1\n",
+    "            num_exceeded = len(query_history) - MAX_TURNS\n",
     "            query_history = query_history[num_exceeded:]\n",
     "            \n",
     "        # Add beginning of sequence and end of sequence ids to input_ids, and convert it to a tensor\n",
@@ -410,6 +410,7 @@
     "\n",
     "        # Determine the speaker of the first turn based on the first speaker id\n",
     "        start_sp_id = query_history[0][0]\n",
+    "        \n",
     "        # Determine the speaker of the next turn\n",
     "        next_sp_id = speaker_1_id if start_sp_id == speaker_2_id else speaker_2_id\n",
     "\n",
@@ -426,7 +427,7 @@
     "        input_ids = torch.LongTensor(input_ids).unsqueeze(0).to(device)\n",
     "        token_type_ids = torch.LongTensor(token_type_ids).unsqueeze(0).to(device)\n",
     "        \n",
-    "        #output_ids = nucleus_sampling(input_ids, token_type_ids, input_len)   \n",
+    "        # output_ids = nucleus_sampling(input_ids, token_type_ids, input_len)   \n",
     "        \n",
     "        # generate a response from the model given some input\n",
     "        output_ids = model.generate(input_ids=input_ids, \n",
@@ -434,10 +435,7 @@
     "                                    pad_token_id=eos_id, \n",
     "                                    do_sample=True, \n",
     "                                    top_p=TOP_P, \n",
-    "                                    max_length=MAX_LEN, \n",
-    "                                    output_hidden_states=True, \n",
-    "                                    output_scores=True, \n",
-    "                                    return_dict_in_generate=True).sequences\n",
+    "                                    max_length=MAX_LEN)\n",
     "        \n",
     "        # extract the generated sequence from the output and remove the input sequence\n",
     "        output_ids = output_ids[0].tolist()[input_len:]\n",
@@ -452,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 196,
    "id": "14fa27e7-2be4-453b-b7f7-d25419fb8dbb",
    "metadata": {
     "tags": []
@@ -470,70 +468,84 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "You:  hi how are you\n"
+      "You:  hola\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bot: hello how are you\n"
+      "Bot: hello how are you doing today\n"
      ]
     },
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "You:  i am very good\n"
+      "You:  nothing much just chilling at home\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bot: i am sorry to hear that\n"
+      "Bot: huh?\n"
      ]
     },
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "You:  why are you sorry ?!\n"
+      "You:  yes\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bot: i am sick of it.\n"
+      "Bot: that sounds like you\n"
      ]
     },
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "You:  sick of what ?\n"
+      "You:  lol\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bot: for example i eat sushi a lot.\n"
+      "Bot: i think i might have a few myself\n"
      ]
     },
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "You:  lol :)\n"
+      "You:  few of what ?!\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bot: not me!\n"
+      "Bot: and a lot of them were the last of the four little ones\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "You:  i don't understand\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bot: i am a lot of yourself\n"
      ]
     },
     {
